--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -61,25 +61,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
-        android:layout_marginBottom="8dp"
         android:text="password"
-        app:layout_constraintBottom_toTopOf="@+id/regfrag_password"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <EditText
-        android:id="@+id/regfrag_password"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="36dp"
-        android:layout_marginEnd="32dp"
-        android:ems="10"
-        android:hint="password"
-        android:inputType="textPersonName"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/regfrag_userName_txt" />
+        tools:layout_editor_absoluteY="255dp" />
 
     <EditText
         android:id="@+id/regfrag_userName_txt"
@@ -136,14 +120,13 @@
         android:layout_width="0dp"
         android:layout_height="48dp"
         android:layout_marginStart="32dp"
-        android:layout_marginTop="248dp"
         android:layout_marginEnd="32dp"
         android:text="register"
         android:textColor="#1DB5BA"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/regfrag_password" />
+        tools:layout_editor_absoluteY="575dp" />
 
     <Button
         android:id="@+id/regfrag_login_btn"
@@ -158,6 +141,17 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/regfrag_register_btn"
         app:layout_constraintVertical_bias="0.513" />
+
+    <EditText
+        android:id="@+id/regfrag_password"
+        android:layout_width="343dp"
+        android:layout_height="59dp"
+        android:ems="10"
+        android:inputType="textPassword"
+        app:layout_constraintBottom_toTopOf="@+id/regfrag_Address"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/regfrag_userName_txt" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
