--- a/app/src/main/res/layout/post_list_row.xml
+++ b/app/src/main/res/layout/post_list_row.xml
@@ -15,12 +15,12 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="242dp">
+        android:layout_height="153dp">
 
         <com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/listrow_avatar_imv"
-            android:layout_width="397dp"
-            android:layout_height="139dp"
+            android:layout_width="106dp"
+            android:layout_height="90dp"
             android:layout_marginStart="4dp"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="8dp"
@@ -37,29 +37,32 @@
             android:layout_height="36dp"
             android:layout_marginStart="4dp"
             android:text="TextView"
+            android:textAlignment="center"
             android:textSize="16sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/listrowAddress"
-            app:layout_constraintHorizontal_bias="0.375"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.053" />
+            app:layout_constraintVertical_bias="0.042" />
 
         <TextView
             android:id="@+id/listrowPost"
-            android:layout_width="396dp"
-            android:layout_height="48dp"
+            android:layout_width="260dp"
+            android:layout_height="104dp"
             android:text="TextView"
-            tools:layout_editor_absoluteX="4dp"
-            tools:layout_editor_absoluteY="47dp" />
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/listrow_avatar_imv" />
 
         <TextView
             android:id="@+id/listrowPrice"
             android:layout_width="70dp"
             android:layout_height="32dp"
-            android:layout_marginTop="12dp"
+            android:layout_marginTop="4dp"
             android:layout_marginEnd="16dp"
             android:text="TextView"
+            android:textAlignment="center"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -67,11 +70,12 @@
             android:id="@+id/listrowAddress"
             android:layout_width="154dp"
             android:layout_height="32dp"
-            android:layout_marginEnd="20dp"
+            android:layout_marginEnd="28dp"
             android:text="TextView"
+            android:textAlignment="center"
             app:layout_constraintBottom_toTopOf="@+id/listrowPost"
             app:layout_constraintEnd_toStartOf="@+id/listrowPrice"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.458" />
+            app:layout_constraintVertical_bias="0.18" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </com.google.android.material.card.MaterialCardView>
