--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -13,12 +13,12 @@
         android:layout_width="0dp"
         android:layout_height="48dp"
         android:layout_marginStart="32dp"
-        android:layout_marginTop="132dp"
+        android:layout_marginTop="72dp"
         android:layout_marginEnd="32dp"
         android:text="Log In"
         android:textColor="#1DB5BA"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/loginfrag_pass_txt" />
 
@@ -34,7 +34,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/loginfrag_login_btn" />
+        app:layout_constraintTop_toBottomOf="@+id/loginfrag_login_btn"
+        app:layout_constraintVertical_bias="0.032" />
 
     <EditText
         android:id="@+id/loginfrag_userName_txt"
