--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -4,47 +4,54 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/background"
     tools:context=".LoginFragment">
 
     `
 
     <Button
         android:id="@+id/loginfrag_login_btn"
-        android:layout_width="0dp"
-        android:layout_height="48dp"
+        android:layout_width="178dp"
+        android:layout_height="57dp"
         android:layout_marginStart="32dp"
-        android:layout_marginTop="72dp"
+        android:layout_marginTop="20dp"
         android:layout_marginEnd="32dp"
+        android:backgroundTint="#37AC2F"
         android:text="Log In"
-        android:textColor="#1DB5BA"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        android:textColor="#E5F2F3"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.585"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/loginfrag_pass_txt" />
 
     <Button
         android:id="@+id/loginfrag_register_btn"
-        style="@style/Widget.MaterialComponents.Button.TextButton"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_width="177dp"
+        android:layout_height="59dp"
         android:layout_marginBottom="92dp"
+        android:backgroundTint="#37AC2F"
         android:text="register"
-        android:textColor="#1DB5BA"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        android:textColor="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.564"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/loginfrag_login_btn"
-        app:layout_constraintVertical_bias="0.032" />
+        app:layout_constraintVertical_bias="0.0" />
 
     <EditText
         android:id="@+id/loginfrag_userName_txt"
         android:layout_width="356dp"
         android:layout_height="56dp"
         android:layout_marginTop="12dp"
+        android:background="#81F6F0F0"
         android:ems="10"
         android:hint="user name"
         android:inputType="textEmailAddress"
+        android:singleLine="false"
+        android:textColor="#050505"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.581"
         app:layout_constraintStart_toStartOf="parent"
@@ -57,6 +64,10 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="100dp"
         android:text="username"
+        android:textColor="#070707"
+        android:textColorHint="#000000"
+        android:textColorLink="#000000"
+        android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
@@ -65,9 +76,12 @@
         android:layout_width="355dp"
         android:layout_height="51dp"
         android:layout_marginTop="8dp"
+        android:background="#80FFFFFF"
         android:ems="10"
         android:hint="password"
         android:inputType="textPassword"
+        android:shadowColor="#000000"
+        android:textColor="#000000"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.589"
         app:layout_constraintStart_toStartOf="parent"
@@ -80,6 +94,8 @@
         android:layout_marginStart="32dp"
         android:layout_marginTop="24dp"
         android:text="password"
+        android:textColor="#000000"
+        android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/loginfrag_userName_txt" />
 
@@ -92,7 +108,7 @@
         android:fontFamily="serif"
         android:text="AgriShare"
         android:textAlignment="center"
-        android:textColor="#27B82D"
+        android:textColor="#1158C1"
         android:textSize="34sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.452"
