--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/background"
     tools:context=".RegisterFragment">
 
 
@@ -13,16 +14,18 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="28dp"
         android:text="Fullname"
+        android:textColor="#000000"
         app:layout_constraintBottom_toTopOf="@+id/regfrag_fullName_txt"
         app:layout_constraintStart_toStartOf="parent" />
 
     <EditText
         android:id="@+id/regfrag_fullName_txt"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_width="354dp"
+        android:layout_height="38dp"
         android:layout_marginStart="32dp"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="32dp"
+        android:background="#8DFFFFFF"
         android:ems="10"
         android:hint="full name"
         android:inputType="textPersonName"
@@ -38,16 +41,18 @@
         android:layout_marginStart="32dp"
         android:layout_marginBottom="12dp"
         android:text="Phone number"
+        android:textColor="#000000"
         app:layout_constraintBottom_toTopOf="@+id/regfrag_Phonenumber"
         app:layout_constraintStart_toStartOf="parent" />
 
     <EditText
         android:id="@+id/regfrag_userName_txt"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_width="343dp"
+        android:layout_height="43dp"
         android:layout_marginStart="32dp"
         android:layout_marginTop="40dp"
         android:layout_marginEnd="32dp"
+        android:background="#8DFFFFFF"
         android:ems="10"
         android:hint="user name"
         android:inputType="textPersonName"
@@ -58,11 +63,12 @@
 
     <EditText
         android:id="@+id/regfrag_Phonenumber"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_width="346dp"
+        android:layout_height="40dp"
         android:layout_marginStart="32dp"
         android:layout_marginTop="56dp"
         android:layout_marginEnd="32dp"
+        android:background="#8DFFFFFF"
         android:ems="10"
         android:hint="Phonenumber"
         android:inputType="textPersonName"
@@ -78,6 +84,7 @@
         android:layout_marginStart="32dp"
         android:layout_marginBottom="12dp"
         android:text="Address"
+        android:textColor="#000000"
         app:layout_constraintBottom_toTopOf="@+id/regfrag_Address"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -85,6 +92,7 @@
         android:id="@+id/regfrag_password"
         android:layout_width="343dp"
         android:layout_height="59dp"
+        android:background="#8DFFFFFF"
         android:ems="10"
         android:inputType="textPassword"
         app:layout_constraintBottom_toTopOf="@+id/regfrag_Address"
@@ -96,11 +104,12 @@
 
     <EditText
         android:id="@+id/regfrag_Address"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_width="343dp"
+        android:layout_height="43dp"
         android:layout_marginStart="32dp"
         android:layout_marginTop="288dp"
         android:layout_marginEnd="32dp"
+        android:background="#8DFFFFFF"
         android:ems="10"
         android:hint="Address"
         android:inputType="textPersonName"
@@ -116,6 +125,7 @@
         android:layout_marginStart="28dp"
         android:layout_marginBottom="4dp"
         android:text="user name"
+        android:textColor="#000000"
         app:layout_constraintBottom_toTopOf="@+id/regfrag_userName_txt"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -125,30 +135,34 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="28dp"
         android:text="password"
+        android:textColor="#000000"
         app:layout_constraintBottom_toTopOf="@+id/regfrag_password"
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/regfrag_register_btn"
-        android:layout_width="0dp"
-        android:layout_height="48dp"
+        android:layout_width="204dp"
+        android:layout_height="69dp"
         android:layout_marginStart="32dp"
-        android:layout_marginTop="56dp"
+        android:layout_marginTop="52dp"
         android:layout_marginEnd="32dp"
+        android:backgroundTint="#37AC2F"
         android:text="register"
-        android:textColor="#1DB5BA"
+        android:textColor="#FFFFFF"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/regfrag_Phonenumber" />
 
     <Button
         android:id="@+id/regfrag_login_btn"
         style="@style/Widget.MaterialComponents.Button.TextButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="195dp"
+        android:layout_height="59dp"
+        android:backgroundTint="#37AC2F"
         android:text="login
 "
+        android:textColor="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.486"
